# lora-fine-tuning

./: .gitignore  GEMINI.md  Makefile  README.md  pyproject.toml
src/CIT/: README.md  __init__.py  config.py  settings.example.toml
src/CIT/RAGs/: RAG_CIT.py  RAG_JIRA.py  launch_RAG.sh  launch_jira_RAG.sh  utils.py  utils2.py  utils_jira.py
src/CIT/UI/: see_last_messages.ipynb  streamlit_app.py  streamlit_app_battle.py  streamlit_app_prod.py  streamlit_app_prod2.py  streamlit_app_staging.py  utils.py
src/CIT/evaluation/: __init__.py  compute_quality_from_answers.py  compute_retrieval_metrics.py  compute_url_precision_recall.py  evaluate_with_judge.py  judge_notebook.ipynb  judge_utils.py  utils.py
src/CIT/evaluation/QA_generation/: answer_questions.py  match_questions_answers.py  rephrase_answers.py  rephrase_questions.py
src/CIT/evaluation/proof_urls_as_proxy/: answer_with_llm.ipynb  compare.ipynb  preprocessing.ipynb
src/CIT/evaluation/scripts/: answers_rephrasing.sh  launch_answers_generation.sh  launch_url_stats_base.sh  launch_url_stats_ft.sh  match_questions_answers.sh  questions_rephrasing.sh
src/CIT/scraping/: __init__.py  config.py  main.py
src/CIT/training/: base_cv_eval.py  compute_quality_from_answers.py  create_ollama_models.py  perform_cross_validation_evaluation.py  perform_cross_validation_training.py  training_script.py  utils.py
src/Wallis/: README.md  scraping.ipynb
src/Wallis/RAGs/: RAGv3.py
src/Wallis/evaluation/: QA_creation.py  QA_utils.py  eval_RAG_QA.py  filter_non_retrieved_questions.py
src/Wallis/training/: train_test_split.py  training_script.py
(+35 files in other folders)
